--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "05d9dc33",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "c72fe3c3",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "0cc01fbd",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"goafrica_entreprises.csv\")\n",
+    "df = pd.read_csv(\"../data/raw/goafrica_entreprises.csv\")\n",
     "print(\"------------Summary------------\")\n",
     "summary(df)"
    ]
@@ -619,12 +619,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "154a3f98",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"processed_data.csv\")"
+    "df.to_csv(\"../data/processed/processed_data.csv\")"
    ]
   },
   {
