fix: correct best_recommanded_pme function to return pme with cosine > 0.5

--- a/artificial_intelligence/notebooks/nlp.ipynb
+++ b/artificial_intelligence/notebooks/nlp.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-06T10:58:07.465660Z",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "_kg_hide-input": false,
     "execution": {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-06T10:59:59.852469Z",
@@ -336,7 +336,227 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>name</th>\n",
+       "      <th>category</th>\n",
+       "      <th>address</th>\n",
+       "      <th>tel</th>\n",
+       "      <th>description</th>\n",
+       "      <th>summary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>229 AdsSquare</td>\n",
+       "      <td>Agences de communication</td>\n",
+       "      <td>BP 1541 Atlantique Department Abomey Calavi - ...</td>\n",
+       "      <td>+2290196117373</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Agences de communication</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2BME SERVICE</td>\n",
+       "      <td>Agences de communication</td>\n",
+       "      <td>2323 Atlantique Department Ouidah - Bénin</td>\n",
+       "      <td>+2290160090917</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Agences de communication</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>ADHERE Digital</td>\n",
+       "      <td>Agences de communication</td>\n",
+       "      <td>Rue 115, Missité Ilot 94 E - Gbedokpo Cotonou ...</td>\n",
+       "      <td>+2290190194845</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Agences de communication</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>ADJINANKOU GROUP - Agence de Communication à C...</td>\n",
+       "      <td>Agences de communication</td>\n",
+       "      <td>Akpakpa), Derrière l'aire de jeux Soweto - Mis...</td>\n",
+       "      <td>+2290162797918</td>\n",
+       "      <td>Adjinankou Group, une agence de communication ...</td>\n",
+       "      <td>Agences de communicationAdjinankou Group, une ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>AFRIKAFUN</td>\n",
+       "      <td>Agences de communication</td>\n",
+       "      <td>llot 625-6815 B- Maison AKOBETO Elias Fidjross...</td>\n",
+       "      <td>+2290164171814</td>\n",
+       "      <td>Agence multidisciplinaire spécialisée dans l'i...</td>\n",
+       "      <td>Agences de communicationAgence multidisciplina...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8210</th>\n",
+       "      <td>8517</td>\n",
+       "      <td>SOLUTIONS DRIVE VTC</td>\n",
+       "      <td>Transports VTC - Taxis</td>\n",
+       "      <td>Cotonou Cotonou - 229 - Bénin</td>\n",
+       "      <td>+2290194613777</td>\n",
+       "      <td>Chauffeur Privé Fiable - Service de réservatio...</td>\n",
+       "      <td>Transports VTC - TaxisChauffeur Privé Fiable -...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8211</th>\n",
+       "      <td>8518</td>\n",
+       "      <td>THIERRY BENIN TAXI</td>\n",
+       "      <td>Transports VTC - Taxis</td>\n",
+       "      <td>- Cotonou - Bénin</td>\n",
+       "      <td>+2290167814858</td>\n",
+       "      <td>Nous mettons à votre disposition notre véhicul...</td>\n",
+       "      <td>Transports VTC - TaxisNous mettons à votre dis...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8212</th>\n",
+       "      <td>8519</td>\n",
+       "      <td>AMBULANCES DES AMAZONES</td>\n",
+       "      <td>Ambulances</td>\n",
+       "      <td>- Saint Michel Cotonou - Bénin</td>\n",
+       "      <td>+2290141970704</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ambulances</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8213</th>\n",
+       "      <td>8520</td>\n",
+       "      <td>SERVICE D'AIDE MEDICALE D'URGENCE DU BENIN - S...</td>\n",
+       "      <td>Ambulances</td>\n",
+       "      <td>Ex-HIA Cotonou - 04 BP 1298 COTONOU - Bénin</td>\n",
+       "      <td>+2290168300202</td>\n",
+       "      <td>Etablissement intervenant dans le pré-hospital...</td>\n",
+       "      <td>AmbulancesEtablissement intervenant dans le pr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8214</th>\n",
+       "      <td>8521</td>\n",
+       "      <td>POLICE REPUBLICAINE</td>\n",
+       "      <td>Police</td>\n",
+       "      <td>Ganhi Cotonou - Bénin</td>\n",
+       "      <td>Tel:+2290121313480</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Police</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8215 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0                                               name  \\\n",
+       "0              4                                      229 AdsSquare   \n",
+       "1              5                                       2BME SERVICE   \n",
+       "2              6                                     ADHERE Digital   \n",
+       "3              7  ADJINANKOU GROUP - Agence de Communication à C...   \n",
+       "4              8                                          AFRIKAFUN   \n",
+       "...          ...                                                ...   \n",
+       "8210        8517                                SOLUTIONS DRIVE VTC   \n",
+       "8211        8518                                 THIERRY BENIN TAXI   \n",
+       "8212        8519                            AMBULANCES DES AMAZONES   \n",
+       "8213        8520  SERVICE D'AIDE MEDICALE D'URGENCE DU BENIN - S...   \n",
+       "8214        8521                                POLICE REPUBLICAINE   \n",
+       "\n",
+       "                      category  \\\n",
+       "0     Agences de communication   \n",
+       "1     Agences de communication   \n",
+       "2     Agences de communication   \n",
+       "3     Agences de communication   \n",
+       "4     Agences de communication   \n",
+       "...                        ...   \n",
+       "8210    Transports VTC - Taxis   \n",
+       "8211    Transports VTC - Taxis   \n",
+       "8212                Ambulances   \n",
+       "8213                Ambulances   \n",
+       "8214                    Police   \n",
+       "\n",
+       "                                                address                 tel  \\\n",
+       "0     BP 1541 Atlantique Department Abomey Calavi - ...      +2290196117373   \n",
+       "1             2323 Atlantique Department Ouidah - Bénin      +2290160090917   \n",
+       "2     Rue 115, Missité Ilot 94 E - Gbedokpo Cotonou ...      +2290190194845   \n",
+       "3     Akpakpa), Derrière l'aire de jeux Soweto - Mis...      +2290162797918   \n",
+       "4     llot 625-6815 B- Maison AKOBETO Elias Fidjross...      +2290164171814   \n",
+       "...                                                 ...                 ...   \n",
+       "8210                      Cotonou Cotonou - 229 - Bénin      +2290194613777   \n",
+       "8211                                  - Cotonou - Bénin      +2290167814858   \n",
+       "8212                     - Saint Michel Cotonou - Bénin      +2290141970704   \n",
+       "8213        Ex-HIA Cotonou - 04 BP 1298 COTONOU - Bénin      +2290168300202   \n",
+       "8214                              Ganhi Cotonou - Bénin  Tel:+2290121313480   \n",
+       "\n",
+       "                                            description  \\\n",
+       "0                                                   NaN   \n",
+       "1                                                   NaN   \n",
+       "2                                                   NaN   \n",
+       "3     Adjinankou Group, une agence de communication ...   \n",
+       "4     Agence multidisciplinaire spécialisée dans l'i...   \n",
+       "...                                                 ...   \n",
+       "8210  Chauffeur Privé Fiable - Service de réservatio...   \n",
+       "8211  Nous mettons à votre disposition notre véhicul...   \n",
+       "8212                                                NaN   \n",
+       "8213  Etablissement intervenant dans le pré-hospital...   \n",
+       "8214                                                NaN   \n",
+       "\n",
+       "                                                summary  \n",
+       "0                              Agences de communication  \n",
+       "1                              Agences de communication  \n",
+       "2                              Agences de communication  \n",
+       "3     Agences de communicationAdjinankou Group, une ...  \n",
+       "4     Agences de communicationAgence multidisciplina...  \n",
+       "...                                                 ...  \n",
+       "8210  Transports VTC - TaxisChauffeur Privé Fiable -...  \n",
+       "8211  Transports VTC - TaxisNous mettons à votre dis...  \n",
+       "8212                                         Ambulances  \n",
+       "8213  AmbulancesEtablissement intervenant dans le pr...  \n",
+       "8214                                             Police  \n",
+       "\n",
+       "[8215 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "try:\n",
     "    dataset = reader(\"../data/processed/processed_data.csv\")\n",
@@ -4377,7 +4597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4397,14 +4617,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/orlando/Documents/Coding Academy/supply-match/ecp/lib/python3.11/site-packages/sklearn/utils/validation.py:2691: UserWarning: X does not have valid feature names, but TruncatedSVD was fitted with feature names\n",
+      "/home/rainatou/Bureau/Rendu/Spec_DATA_IA/supply-match/mon_env/lib/python3.12/site-packages/sklearn/utils/validation.py:2691: UserWarning: X does not have valid feature names, but TruncatedSVD was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -4412,25 +4632,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recommandations générées avec succès pour la recherche 'Je veux une agence de communication'.\n",
+      "Recommandations générées avec succès pour la recherche 'Je veux une agence de sport'.\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'name': 'NETCEL BENIN', 'score': 0.775708065471625},\n",
-       " {'name': 'AGENCE CREATIVE STAMINA', 'score': 0.6117780467011708},\n",
-       " {'name': '2BME SERVICE', 'score': 0.5985910584113515}]"
+       "[{'name': 'FLEX FITNESS', 'score': 0.6182811189712816},\n",
+       " {'name': \"DRAGONS FOOTBALL CLUB DE L'OUEME\", 'score': 0.6182811189712816},\n",
+       " {'name': 'PLANETE FOOT BENIN', 'score': 0.6182811189712816}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_recommended_pme(\"Je veux une agence de communication\", vector, lsa, topic_df, 3)"
+    "best_recommended_pme(\"Je veux une agence de sport\", vector, lsa, topic_df, 3)"
    ]
   },
   {
@@ -4496,7 +4716,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "ecp",
+   "display_name": "mon_env",
    "language": "python",
    "name": "python3"
   },
@@ -4510,7 +4730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
